[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "tsfm_public"
version = "0.0.1"
description = "Public notebooks and utilities for TSFM"
authors = ["IBM"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = ">=2.2.0"
scikit-learn = "*"
transformers = {extras = ["torch"], version = "~=4.36.1"}
datasets = "*"
deprecated = "*"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
ipywidgets = "^8.1.3"
plotly = "^5.22.0"
tensorboard = "^2.16.2"
pytest = "^8.2.2"
parameterized = "^0.9.0"
pre-commit = "^3.7.1"
ruff = "^0.4.8"
altair = "^5.3.0"
toml = "^0.10.2"

[tool.setuptools]
packages = [
    "tsfm_public",
    "tsfm_public.toolkit",
    "tsfm_public.models",
    "tsfm_public.models.tinytimemixer",
    "tsfm_public.models.tinytimemixer.utils",
    "tsfmhfdemos",
    "tsfmhfdemos.neurips",
    "tsfmhfdemos.neurips.backends",
    "tsfmhfdemos.neurips.backends.v1",
    "tsfmhfdemos.neurips.backends.v1.figures"
]

#[tool.setuptools_scm]
#version_file = "tsfm_public/_version.py"

[tool.ruff]
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["tsfm_public"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
